--- a/CRUDApplication/src/app/employees/employee-list/employee-list.component.html
+++ b/CRUDApplication/src/app/employees/employee-list/employee-list.component.html
@@ -1,3 +1,13 @@
-<p>
-  employee-list works!
-</p>
+<table class="table table-hover">
+
+  <tr *ngFor= "let emp of service.list">
+
+    <td (click)="populateForm(emp)"> [{{emp.EmpCode}}]-{{emp.FullName}} </td>
+    <td (click)="populateForm(emp)"> {{emp.Office}} </td>
+    <td (click)="populateForm(emp)"> {{emp.Mobile}} </td>
+    <td><button (click)="onDelete(emp.EmployeeID)" class="btn btn-sm btn-outline-danger">X</button></td>
+
+  </tr>
+
+
+</table>
